project: target jdk 16, fix missing plugins